# rust-security

./: Cargo.toml  LICENSE  LICENSE.md  README.md
certs/: ca.key  ca.pem  ca.srl  evil_ca.key  evil_ca.pem  evil_ca.srl  evil_server.crt  evil_server.csr  evil_server.key  evil_server.pem  server.crt  server.csr  server.key  server.pem
docs/: outline.md  projects.md  week1_review_questions.md  week2_review_questions.md
docs/day01/: lab.md  lecture.md
docs/day02/: lab.md  lecture.md  project1.md
docs/day03/: lab.md  lecture.md  rop_training.md
docs/day04/: lab.md  lecture.md
docs/day05/: lab.md  lab_solution.md  lecture.md  xor-ecb-cbc.md
docs/day06/: lab.md  lecture.md
docs/day07/: lab.md  lecture.md
docs/day08/: lab.md  lecture.md
docs/day09/: lab.md  lecture.md
docs/day10/: lab.md  lecture.md
examples/: auth_server.rs  auth_server_no-unsafe.rs  auth_test_client.rs  cbc_demo.rs  certinfo.rs  cli_hmac.rs  common_passwords.txt  day5_mode_comparison.rs  ecb_demo.rs  hash_password.rs  hmac_sha256_from_scratch.rs  http_proxy.rs  mitm.rs  password_strength_checker.rs  rate_limited_server.rs  rsa.rs  rsa_bench.rs  secure_hmac.rs  tcp_conn_flood.rs  test_privilege.rs  test_rfc4231.rs  tls_client.rs  tls_server.rs  xor_cipher.rs
fixtures/: ca.key  ca.pem  ca.srl  leaf.csr  leaf.key  leaf.pem
