[package]
name = "rust-security"
version = "0.1.0"
edition = "2024"

[dependencies]
# password hashing with argon2
argon2 = { version = "0.5", features = ["std"] }

# unix system calls for privilege separation
nix = { version = "0.30", features = ["process", "user"] }

# random number generation for salt
rand_core = { version = "0.6", features = ["std"] }

# serialization for user data storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# core cryptography
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
aes-gcm = "0.10"

# utilities
base64 = "*"
rand = "*"
anyhow = "1"
hex = "*"

# image processing (for ECB demo)
image = "*"

# cipher traits
cipher = "*"

[dev-dependencies]
criterion = "*"
