[package]
name = "rust-security"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"

# password hashing with argon2
argon2 = { version = "0.5", features = ["std"] }

# unix system calls for privilege separation
nix = { version = "0.30", features = ["process", "user"] }

# random number generation for salt
rand_core = { version = "0.6", features = ["std"] }

# serialization for user data storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# core cryptography - modern rustcrypto stack
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
aes-gcm = "0.10"

# utilities
rand = "0.9"
hex = "0.4"
base64 = "0.22"

# image processing (for ecb visual demonstration)
image = { version = "0.25", optional = true }

# cipher traits for generic programming
cipher = { version = "0.4", features = ["block-padding"] }

rsa = { version = "0.9", default-features = false, features = ["sha2"] }
sha2 = "0.10"

x25519-dalek = "2"
hkdf = "0.12"

x509-parser = "0.17"

[dev-dependencies]
criterion = "0.7"

[features]
default = []
image_demo = ["image"]
